src/geometry/shape/polygon/snapshots/spatial_id__geometry__shape__polygon__tests__cover_single_ids__pentagon_at_z18.snap
---
source: src/geometry/shape/polygon/tests.rs
expression: "sorted_ids(&polygon, 18)"
---
[
    "18/0/232846/103224",
    "18/0/232846/103225",
    "18/0/232847/103224",
    "18/0/232847/103225",
    "18/0/232847/103226",
    "18/0/232848/103224",
    "18/0/232848/103225",
    "18/0/232848/103226",
]
